pequenas grandes correções no swagger
