# docs/swagger.json
@@ -29,11 +29,13 @@
                 "summary": "Update Clinic",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
+                        "description": "Clinicas Data",
+                        "name": "clinica",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.clinicaHandler"
+                        }
                     }
                 ],
                 "responses": {
@@ -79,10 +81,10 @@
                 "summary": "List All Clinics",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Clinicas ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -127,11 +129,13 @@
                 "summary": "Save Clinic",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
+                        "description": "Clinicas Data",
+                        "name": "clinica",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.clinicaHandler"
+                        }
                     }
                 ],
                 "responses": {
@@ -177,10 +181,10 @@
                 "summary": "List Clinic by id",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Clinicas ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -225,10 +229,10 @@
                 "summary": "Delete Clinic",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Clinicas ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -275,11 +279,13 @@
                 "summary": "Save Scheduling",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
+                        "description": "Consulta Data",
+                        "name": "consulta",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.consultaHandler"
+                        }
                     }
                 ],
                 "responses": {
@@ -325,11 +331,13 @@
                 "summary": "Save Scheduling from enrollments",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
+                        "description": "Consulta Data",
+                        "name": "consulta",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.consultaHandler"
+                        }
                     }
                 ],
                 "responses": {
@@ -375,10 +383,10 @@
                 "summary": "Get All Schedulings",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Consultas ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -425,10 +433,10 @@
                 "summary": "Get Scheduling by ID",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Consultas ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -473,11 +481,13 @@
                 "summary": "Put Scheduling by ID",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
+                        "description": "Consulta Data",
+                        "name": "consulta",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.consultaHandler"
+                        }
                     }
                 ],
                 "responses": {
@@ -521,10 +531,10 @@
                 "summary": "Delete Scheduling by ID",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Consultas ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -572,9 +582,9 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "description": "Consultas RG",
+                        "name": "rg",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -621,10 +631,10 @@
                 "summary": "Get All Dentists",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Dentistas ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -633,12 +643,6 @@
                         "description": "OK",
                         "schema": {
                             "type": "objet"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/web.errorResponse"
                         }
                     },
                     "404": {
@@ -669,11 +673,13 @@
                 "summary": "Save Dentist",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
+                        "description": "Dentista Data",
+                        "name": "dentista",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.dentistaHandler"
+                        }
                     }
                 ],
                 "responses": {
@@ -681,12 +687,6 @@
                         "description": "OK",
                         "schema": {
                             "type": "objet"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/web.errorResponse"
                         }
                     },
                     "404": {
@@ -719,10 +719,10 @@
                 "summary": "get Dentist by ID",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Dentistas ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -731,12 +731,6 @@
                         "description": "OK",
                         "schema": {
                             "type": "objet"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/web.errorResponse"
                         }
                     },
                     "404": {
@@ -769,11 +763,13 @@
                 "summary": "Put Dentist by ID",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
+                        "description": "Dentista Data",
+                        "name": "dentista",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.dentistaHandler"
+                        }
                     }
                 ],
                 "responses": {
@@ -817,10 +813,10 @@
                 "summary": "Deleta Dentist",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Dentistas ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -829,12 +825,6 @@
                         "description": "OK",
                         "schema": {
                             "type": "objet"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/web.errorResponse"
                         }
                     },
                     "404": {
@@ -867,10 +857,10 @@
                 "summary": "Get Dentist by Enrollment",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Dentistas enrollment",
+                        "name": "matricula",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -879,12 +869,6 @@
                         "description": "OK",
                         "schema": {
                             "type": "objet"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/web.errorResponse"
                         }
                     },
                     "404": {
@@ -917,10 +901,10 @@
                 "summary": "Get All Patients",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Pacientes ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -965,11 +949,13 @@
                 "summary": "Put Patient by ID",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
+                        "description": "Dentista Data",
+                        "name": "dentista",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.dentistaHandler"
+                        }
                     }
                 ],
                 "responses": {
@@ -1015,11 +1001,13 @@
                 "summary": "Post Patient",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
+                        "description": "Dentista Data",
+                        "name": "dentista",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.dentistaHandler"
+                        }
                     }
                 ],
                 "responses": {
@@ -1065,10 +1053,10 @@
                 "summary": "Get Dentist by ID",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Pacientes ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -1113,10 +1101,10 @@
                 "summary": "Deleta Patient by ID",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
+                        "type": "integer",
+                        "description": "Pacientes ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -1150,6 +1138,15 @@
         }
     },
     "definitions": {
+        "handlers.clinicaHandler": {
+            "type": "object"
+        },
+        "handlers.consultaHandler": {
+            "type": "object"
+        },
+        "handlers.dentistaHandler": {
+            "type": "object"
+        },
         "web.errorResponse": {
             "type": "object",
             "properties": {
